--- a/notes/场景题.md
+++ b/notes/场景题.md
@@ -1,7 +1,3 @@
-## 秒杀系统怎么设计
-
-[秒杀系统设计](https://www.teqng.com/2021/09/07/%E9%9D%A2%E9%9C%B8%EF%BC%9A%E7%A7%92%E6%9D%80%E7%B3%BB%E7%BB%9F%E5%A6%82%E4%BD%95%E8%AE%BE%E8%AE%A1%EF%BC%9F/)
-
 
 
 ## 海量10G数据找出中位数，内存2G
@@ -51,6 +47,34 @@ https://blog.csdn.net/qq_41306849/article/details/119828746
 思路六：bitmap位图算法
 
 
+
+
+
+## 技术书籍
+
+凤凰架构 周志明
+
+
+
+为什么读这个本书
+
+
+
+## 微服务
+
+
+
+
+
+## 负载均衡
+
+
+
+
+
+### JSR303自定义参数验证
+
+使用JSR303自定义校验器，实现对用户账号、密码的验证，使得验证逻辑从业务代码中脱离出来。
 
 
 
