--- a/notes/操作系统面经.md
+++ b/notes/操作系统面经.md
@@ -35,6 +35,8 @@
 - 进程通信。完成进程之间的消息传递或信号传递等功能。
 - 内存管理。完成内存的分配、回收以及获取作业占用内存区大小及地址等功能。
 
+
+
 ## 如何从用户态切换到内核态
 - 系统调用
 这是用户态进程主动要求切换到内核态的一种方式，用户态进程通过系统调用申请使用操作系统提供的服务程序完成工作，比如 read 操作，比如前例中 fork() 实际上就是执行了一个创建新进程的系统调用。而系统调用的机制其核心还是使用了操作系统为用户特别开放的一个中断来实现，例如Linux的int 80h中断。
@@ -46,6 +48,124 @@
 这3种方式是系统在运行时由用户态转到内核态的最主要方式，其中系统调用可以认为是用户进程主动发起的，异常和外围设备中断则是被动的。
 
 
+
+## 硬中断 软中断区别
+
+**硬中断：**
+
+由与系统相连的外设(比如网卡、硬盘)自动产生的。主要是用来通知操作系统系统外设状态的变化。比如当网卡收到数据包的时候，就会发出一个中断。我们通常所说的中断指的是硬中断(hardirq)。
+
+**软中断：**
+
+为了满足实时系统的要求，中断处理应该是越快越好。linux为了实现这个特点，当中断发生的时候，硬中断处理那些短时间就可以完成的工作，而将那些处理事件比较长的工作，放到中断之后来完成，也就是软中断(softirq)来完成。
+
+
+
+**软中断是执行中断指令产生的，而硬中断是由外设引发的**。
+
+硬中断的中断号是由中断控制器提供的，软中断的中断号由指令直接指出，无需使用中断控制器。
+
+硬中断是可屏蔽的，软中断不可屏蔽。
+
+硬中断处理程序要确保它能快速地完成任务，这样程序执行时才不会等待较长时间，称为上半部。
+
+软中断处理硬中断未完成的工作，是一种推后执行的机制，属于下半部。
+
+
+
+## 中断机制
+
+### 1.1 什么是中断
+
+- **定义**
+
+中断（interrupt）是计算机系统中的基本机制之一。即：在计算机运行过程中，当发生某个事件后，CPU 会停止当前程序流，转而去处理该事件，并在处理完毕后继续执行原程序流。
+
+![img](https://pic3.zhimg.com/80/v2-202769bdb2991338d165bb01f0830002_720w.jpg)
+
+### 1.2 为什么引入中断
+
+中断机制的好处是 **化主动为被动，避免 CPU 轮询等待某条件成立**。如果没有中断机制，那么“某个条件成立”就需要 CPU 轮询判断，这样就会增加系统的开销。而使用中断机制，就可以在条件成立之后，向 CPU 发送中断事件，强制中断 CPU 执行程序，转而去执行中断处理程序。
+
+### 1.3 硬中断
+
+硬中断由外部设备（例如：磁盘，网卡，键盘，时钟）产生，用来通知操作系统外设状态变化。
+
+> **时钟中断：** 一种硬中断，用于定期打断 CPU 执行的线程，以便切换给其他线程以得到执行机会。
+
+硬中断的处理流程如下：
+
+- 1、**外设** 将中断请求发送给中断控制器；
+- 2、**中断控制器** 根据中断优先级，有序地将中断传递给 CPU；
+- 3、**CPU** 终止执行当前程序流，将 CPU 所有寄存器的数值保存到栈中；
+- 4、**CPU** 根据中断向量，从中断向量表中查找中断处理程序的入口地址，执行中断处理程序；
+- 5、**CPU** 恢复寄存器中的数值，返回原程序流停止位置继续执行。
+
+### 1.4 **软中断**
+
+软中断是一条 CPU 指令，由当前正在运行的进程产生。
+
+软中断模拟了硬中断的处理过程：
+
+- 1、无
+- 2、无
+- 3、**CPU** 终止执行当前程序流，将 CPU 所有寄存器的数值保存到栈中；
+- 4、**CPU** 根据中断向量，从中断向量表中查找中断处理程序的入口地址，执行中断处理程序；
+- 5、**CPU** 恢复寄存器中的数值，返回原程序流停止位置继续执行。
+
+> **系统调用：** 是一种软中断处理程序，用于让程序从用户态陷入内核态，以执行相应的操作。
+
+
+
+## 2. 系统调用
+
+### 2.1 操作系统与应用的边界
+
+- **内核空间**
+
+操作系统（Operating System）是管理计算机硬件与软件资源的程序，操作系统内核驻留在受保护的内核空间。
+
+- **用户空间**
+
+应用是运行在操作系统上运行的程序，工作在用户空间。
+
+- **隔离**
+
+处于安全性和稳定性考虑，用户空间程序无法直接执行内核代码（例如：I/O 读写、创建新进程/线程），也无法访问内核数据，必须通过系统调用。
+
+### 2.2 系统调用的定义
+
+**系统调用（Syscall）** 是一种软中断处理程序，用于让程序从用户态陷入内核态，以执行相应的操作。
+
+### 2.3 系统调用的作用
+
+当发生系统调用时，会让程序从用户态陷入内核态，以执行相应的操作。
+
+### 2.4 系统调用中断处理程序的流程
+
+- 1、程序从用户态陷入内核态
+- 2、根据系统调用号，在系统调用表中查找对应的系统调用函数的内存地址，执行系统调用函数。
+- 3、程序从内核态返回用户态
+
+
+
+## 键盘敲入 A 字母时，操作系统在期间发生了什么
+
+https://xw.qq.com/cmsid/20201230A0H39J00
+
+![image-20220526165350111](操作系统面经/image-20220526165350111.png)
+
+CPU 里面的内存接口，直接和系统总线通信，然后系统总线再接入一个 I/O 桥接器，这个 I/O 桥接器，另一边接入了内存总线，使得 CPU 和内存通信。再另一边，又接入了一个 I/O 总线，用来连接 I/O 设备，比如键盘、显示器等。
+
+那当用户输入了键盘字符，键盘控制器就会产生扫描码数据，并将其缓冲在键盘控制器的寄存器中，紧接着键盘控制器通过总线给 CPU 发送中断请求。
+
+CPU 收到中断请求后，操作系统会保存被中断进程的 CPU 上下文，然后调用**键盘的中断处理程序**。
+
+键盘的中断处理程序是在键盘驱动程序初始化时注册的，那键盘中断处理函数的功能就是从键盘控制器的寄存器的缓冲区读取扫描码，再根据扫描码找到用户在键盘输入的字符，如果输入的字符是显示字符，那就会把扫描码翻译成对应显示字符的 ASCII 码，比如用户在键盘输入的是字母 A，是显示字符，于是就会把扫描码翻译成 A 字符的 ASCII 码。
+
+得到了显示字符的 ASCII 码后，就会把 ASCII 码放到「读缓冲区队列」，接下来就是要把显示字符显示屏幕了，显示设备的驱动程序会定时从「读缓冲区队列」读取数据放到「写缓冲区队列」，最后把「写缓冲区队列」的数据一个一个写入到显示设备的控制器的寄存器中的数据缓冲区，最后将这些数据显示在屏幕里。
+
+显示出结果后，恢复被中断进程的上下文。
 
 
 
