--- a/notes/数据库面经.md
+++ b/notes/数据库面经.md
@@ -564,3 +564,159 @@ select id,name from user where name='shenjian';
 1NF：属性不可再分。
 2NF：1NF 的基础之上，消除了非主属性对于码的部分函数依赖。
 3NF：3NF 在 2NF 的基础之上，消除了非主属性对于码的传递函数依赖
+
+
+
+## 数据库连接池定义
+
+数据库连接池是个容器，负责分配、管理数据库连接(Connection)
+
+它允许应用程序重复使用一个现有的数据库连接，而不是再重新建立一个
+
+释放空闲时间超过最大空闲时间的数据库连接来避免因为没有释放数据库连接而引起的数据库连接遗漏
+
+好处
+
+资源重用
+提升系统响应速度
+避免数据库连接遗漏
+
+
+
+连接池是在一开始就创建好了一些连接（Connection）对象存储起来。用户需要连接数据库时，不需要自己创建连接，而只需要从连接池中获取一个连接进行使用，使用完毕后再将连接对象归还给连接池；这样就可以起到资源重用，也节省了频繁创建连接销毁连接所花费的时间，从而提升了系统响应的速度。
+
+
+
+常用的数据库连接池： C3P0、DBCP、Druid、HiKariCP
+
+C3P0： 在16-18年没有更新，19年更新了，但是更新很慢，且历史悠久，代码及其复杂，不利于维护，性能差，不推荐使用。
+DBCP： 更新速度很慢，基本处于不活跃状态，不推荐使用。
+Druid(德鲁伊)： 阿里开源，功能最为全面，**黑名单拦截**等功能，统计数据较为全面，具有良好的扩展性，需要监控sql性能，推荐使用。Druid的最强大之处在于它有着强大的**sql监控**，可以监控我们发送到数据库的所有sql语句。
+HiKariCP： SpringBoot2默认的数据源，优化力度大，功能简单，起源于boneCP，性能优越，推荐使用。
+
+
+
+Druid 和 HikariCP 对比
+
+Druid连接池是阿里巴巴开源的数据库连接池项目，后来贡献给Apache开源；
+
+Druid的作用是负责分配、管理和释放数据库连接，它允许应用程序重复使用一个现有的数据库连接，而不是再重新建立一个；
+
+Druid连接池内置强大的监控功能，其中的StatFilter功能，能采集非常完备的连接池执行信息，方便进行监控，而监控特性不影响性能。
+
+Druid连接池内置了一个监控页面，提供了非常完备的监控信息，可以快速诊断系统的瓶颈。
+
+SpringBoot 1.x版本默认使用的的tomcat的jdbc连接池，由于jdbc性能，稳定性，监控能力都不不太好，所以SpringBoot 2.x版本后 默认连接池已经替换成了HikariCP，HikariCP性能强、速度快、口碑好、代码少和稳定，暂时不推荐替换成成其他连接池。
+
+
+
+## 数据库读写分离 分库分表
+
+**读写分离主要是为了将对数据库的读写操作分散到不同的数据库节点上**
+
+一般情况下，我们都会选择一主多从，也就是一台主数据库负责写，其他的从数据库负责读。主库和从库之间会进行数据同步，以保证从库中数据的准确性。
+
+出现的问题：
+
+**主从同步延迟** ：主库和从库的数据存在延迟，比如你写完主库之后，主库的数据同步到从库是需要时间的，这个时间差就导致了主库和从库的数据不一致性问题。
+
+
+
+## 如何实现读写分离
+
+1. 部署多台数据库，选择其中的一台作为主数据库，其他的一台或者多台作为从数据库。
+2. 保证主数据库和从数据库之间的数据是实时同步的，这个过程也就是我们常说的**主从复制**。
+3. 系统将写请求交给主数据库处理，读请求交给从数据库处理。
+
+在实际项目过程中，使用
+
+**1.代理方式**
+
+我们可以在应用和数据中间加了一个代理层。应用程序所有的数据请求都交给代理层处理，代理层负责分离读写请求，将它们路由到对应的数据库中。
+
+提供类似功能的中间件有 **MySQL Router**（官方）、**Atlas**（基于 MySQL Proxy）、**Maxscale**、**MyCat**。
+
+**2.组件方式**
+
+比较推荐的一种方式，推荐使用 `sharding-jdbc` ，直接引入 jar 包即可使用
+
+
+
+## 主从复制原理：
+
+MySQL binlog(binary log 即二进制日志文件) 主要记录了 MySQL 数据库中数据的所有变化(数据库执行的所有 DDL 和 DML 语句)。因此，我们根据主库的 MySQL binlog 日志就能够将主库的数据同步到从库中。
+
+![image-20220719144716990](数据库面经/image-20220719144716990.png)
+
+1. 主库将数据库中数据的变化写入到 binlog
+2. 从库连接主库
+3. 从库会创建一个 I/O 线程向主库请求更新的 binlog
+4. 主库会创建一个 binlog dump 线程来发送 binlog ，从库中的 I/O 线程负责接收
+5. 从库的 I/O 线程将接收的 binlog 写入到 relay log 中。
+6. 从库的 SQL 线程读取 relay log 同步数据本地（也就是再执行一遍 SQL ）。
+
+**阿里开源的一个叫做 canal 的工具 的原理就是模拟 MySQL 主从复制的过程，解析 binlog 将数据同步到其他的数据源。**
+
+
+
+## 分库分表
+
+读写分离主要应对的是数据库读并发，没有解决数据库存储压力问题。
+
+
+
+**分库** 就是将数据库中的数据分散到不同的数据库上。
+
+下面这些操作都涉及到了分库：
+
+- 你将数据库中的用户表和用户订单表分别放在两个不同的数据库。
+- 由于用户表数据量太大，你对用户表进行了水平切分，然后将切分后的 2 张用户表分别放在两个不同的数据库。
+
+
+
+**分表** 就是对单表的数据进行拆分，可以是垂直拆分，也可以是水平拆分。
+
+**何为垂直拆分？**
+
+简单来说，垂直拆分是对数据表列的拆分，把一张列比较多的表拆分为多张表。
+
+举个例子：我们可以将用户信息表中的一些列单独抽出来作为一个表。
+
+**何为水平拆分？**
+
+简单来说，水平拆分是对数据表行的拆分，把一张行比较多的表拆分为多张表。
+
+举个例子：我们可以将用户信息表拆分成多个用户信息表，这样就可以避免单一表数据量过大对性能造成影响。
+
+
+
+### 什么情况下需要分库分表？
+
+遇到下面几种场景可以考虑分库分表：
+
+- 单表的数据达到千万级别以上，数据库读写速度比较缓慢（分表）。
+- 数据库中的数据占用的空间越来越大，备份时间越来越长（分库）。
+- 应用的并发量太大（分库）。
+
+
+
+分库分表带来的问题：
+
+- **join 操作** ： 同一个数据库中的表分布在了不同的数据库中，导致无法使用 join 操作。这样就导致我们需要手动进行数据的封装，比如你在一个数据库中查询到一个数据之后，再根据这个数据去另外一个数据库中找对应的数据。
+- **事务问题** ：同一个数据库中的表分布在了不同的数据库中，如果单个操作涉及到多个数据库，那么数据库自带的事务就无法满足我们的要求了。
+- **分布式 id** ：分库之后， 数据遍布在不同服务器上的数据库，数据库的自增主键已经没办法满足生成的主键唯一了。我们如何为不同的数据节点生成全局唯一主键呢？这个时候，我们就需要为我们的系统引入分布式 id 了。
+
+
+
+##  实现分库分表的方案：
+
+ShardingSphere（包括 Sharding-JDBC、Sharding-Proxy 和 Sharding-Sidecar） 绝对可以说是当前分库分表的首选！ShardingSphere 的功能完善，除了支持读写分离和分库分表，还提供分布式事务、数据库治理 柔性事务等功能。
+
+通过简单的行表达式用于配置数据节点和数据分片算法
+
+深入
+
+https://mp.weixin.qq.com/s/A2MYOFT7SP-7kGOon8qJaw
+
+类似的工具还有Mycat中间件 Taobao Distribute Data Layer
+
