--- a/notes/英文面试准备.md
+++ b/notes/英文面试准备.md
@@ -1,12 +1,37 @@
 ## self introduction
 
-面试官你好，我是吴志祥 一名华南理工大学的研究生二年级，我学的专业是软件工程，我本科学的也是软件工程，我比较熟悉java编程。也对redis Mysql 数据库和计算机网络 操作系统知识都有一定的了解 我是个运动boy 有时会去打球和跳舞 爵士男
+面试官你好，我是吴志祥 一名华南理工大学的研究生二年级，我学的专业是软件工程，我本科学的也是软件工程，我比较熟悉java编程 多线程并发 容器集合等。也对redis Mysql 数据库
+
+消息队列例如Kafka 并应用到实际中项目。
+
+对于软件测试开发，我学过 软件需求分析 软件测试的相关课程 对测试的理论非常熟悉 我曾经在美的实习过 参与供应链系统b2b业务开发 Using mockito 和powermock模块对自己负责的供应链订单打印业务api进行单元测试 单元测试代码行覆盖率达到80%
+在日常的项目开发中 我也经常用Junit对业务的代码逻辑进行单元测试。
+
+
 
 Hello, interviewer, my name is Zhixiang Wu, a second-year graduate student at South China University of Technology. 
 
 My major is software engineering, and my undergraduate degree is also software engineering. 
 
-I am familiar with java programming. I also have a certain understanding of redis Mysql database and computer network operating system knowledge and so on
+I am familiar with java programming especially in multithread concurrent Knowledge and Collections.
+
+I also have a certain understanding of redis Mysql database  message queue like Kafka and  apply  them in real project.
+
+
+
+For software testing and development, I have studied the relevant courses of software requirements analysis and software testing, and I am very familiar with the theory of testing. I had an internship in Midea and participated in the B2B business development of the supply chain system. 
+
+I uesd mockito & powermock to carry out Java unit test,
+
+on the supply chain order printing business APIs which l am responsible for
+
+the unit test coverage of my responsible module reaches 80%
+
+In daily project development, I often use JUnit to unit test the business code logic.
+
+this is all about my introduction and the testing work experience
+
+
 
 
 
@@ -27,7 +52,7 @@ transfer模块异步地从Kafka集群读取日志数据
 
 
 
-I would like to introduce you a Kafka-based log data stream collection project. I started this project in November last year, and it took me more than two months.
+I would like to introduce you a Kafka-based log data stream collection project. I started this project in November last year, and it took me more than two months.  
 
 This project consists of two modules, agent and transfer. It adopts the producer-consumer model to realize real-time collection and storage of business logs.
 
@@ -43,31 +68,83 @@ Finally, that's all for my introduction to this log collection project. If the i
 
 
 
-模块
+在线社交网络系统项目 
 
-不用 简历没写
+实验室广东省基金项目
 
-在线社交网络分析系统项目 
+从互联网收集社交网络数据，构建社交网络传播数据存入Mysql数据库中
 
-实验室广东省基金项目，在线社交网络分析系统采用SSM框架进行实现 
+在线社交网络系统采用 SSM 框架进行实现 
 
-从互联网收集社交网络数据，构建社交网络传播数据存入Mysql数据库中，构建图神经网络模型对社交网络传播数据进行分析 
+采用 axios 发起HTTP请求，实现前后端分离 
 
-系统使用Redis进行数据缓存，采用了ElasticSearch对社交网络数据进行近实时的处理和搜索响应
+社交网络系统采用 Mysql 数据库进行存储 
 
-
-
-Online Social Network Analysis System Project
-
-Laboratory Guangdong Province Fund Project, the online social network analysis system is implemented using the SSM framework
-
-Collect social network data from the Internet, build social network communication data and store it in the Mysql database, build a graph neural network model to analyze social network communication data
-
-The system uses Redis for data caching, and uses ElasticSearch to process and respond to social network data in near real time.
+采用Redis集群进行数据缓存，保证了用户访问时系统的高性能和高并发
 
 
 
-## 算法介绍
+Online Social Network  System
+
+Laboratory Guangdong Province Fund Project
+
+The online social network system is implemented by SSM framework
+
+Use Axios to initiate HTTP requests to separate the front end from the back end
+
+The social network system uses MySQL database for storage
+
+The system uses Redis for data caching to ensure high performance and high concurrency of the system when users access
 
 
+
+## Intership
+
+我在美的实习过
+
+美的集团 - 美云智数协作云部门 后台实习生 2019年7月 - 2019年9月 
+
+参与供应链系统B2B业务开发 
+
+独立设计实现了供应链系统采购订单打印业务开发，编写了业务开发文档 
+
+使用 Mockito&PowerMock 进行单元测试，在负责的模块中单测覆盖率达到80%
+
+
+
+
+
+I had an internship in Midea
+
+Midea Group - Midea cloud smart digital collaboration cloud department background intern July 2019 - September 2019
+
+- Participate in B2B business development of supply chain system
+
+- Independently designed and realized the purchase order printing business development of the supply chain system, and compiled the business development document
+
+- Using mockito & powermock to carry out Java unit test, the unit test coverage of my responsible module reaches 80%
+
+
+
+
+
+## Question
+
+我可以六月15号到十月15号去特斯拉实习，大概四个月，我希望能获得转正机会
+
+I can go to Tesla for internship from June 15  I hope to intern all the time, until get the opportunity to become a full-time employee
+
+
+
+测试开发的实习生的实习工作是干什么的，具体会涉及到特斯拉哪些业务
+
+What is the internship work of the test development intern, and what specific Tesla businesses will be involved.
+
+
+
+由于上海新冠疫情，如果有机会的话，我什么时候能够去上海实习了
+
+Due to the COVID-19 in Shanghai, when can I go to Shanghai for internship if I have the opportunity
+
+or  l can intern online if possible.
 
