change the url picture to current directory

--- a/notes/操作系统面经.md
+++ b/notes/操作系统面经.md
@@ -81,7 +81,7 @@
 
 中断（interrupt）是计算机系统中的基本机制之一。即：在计算机运行过程中，当发生某个事件后，CPU 会停止当前程序流，转而去处理该事件，并在处理完毕后继续执行原程序流。
 
-![img](https://pic3.zhimg.com/80/v2-202769bdb2991338d165bb01f0830002_720w.jpg)
+![image-20220728111053951](操作系统面经/image-20220728111053951.png)
 
 ### 1.2 为什么引入中断
 
@@ -218,9 +218,7 @@ https://www.jianshu.com/p/cded914786d5
 - **系统级打开文件表(open file table)**
 - **文件系统i-node表(i-node table)**
 
-![img](https://upload-images.jianshu.io/upload_images/2322338-e9e60a745921ba84.png?imageMogr2/auto-orient/strip|imageView2/2/w/700/format/webp)
-
-
+![image-20220728111120483](操作系统面经/image-20220728111120483.png)
 
 
 
@@ -256,9 +254,7 @@ https://blog.csdn.net/lizhidefengzi/article/details/70231334
 
 信号处理
 
-
-
-![img](https://pic3.zhimg.com/80/v2-cc735b1cc4cf703b38c7d5c8806d9dfa_720w.jpg)
+![image-20220728111229679](操作系统面经/image-20220728111229679.png)
 
 
 
@@ -303,13 +299,16 @@ https://blog.csdn.net/lizhidefengzi/article/details/70231334
 	并且只能在具有亲属关系的进程之间通信使用。
 	可以看成是一种特殊的文件，但是这种文件只能存在于内存之中。
 	- 命名管道：可以用 mkfifo 命令创建一个命名管道，可以用一个进程向管道里写数据，然后可以让另一个进程把里面的数据读出来。命名管道的优点是去除了只能在父子进程中使用的限制，并且命名管道有路径名和它相关联，是以一种特殊设备文件形式存在于文件系统中的。
-	![在这里插入图片描述](https://img-blog.csdnimg.cn/3ed5ba6ad67543e7b3a4f3ca6ba9e91a.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_20,color_FFFFFF,t_70,g_se,x_16)
+	![image-20220728111325422](操作系统面经/image-20220728111325422.png)
 - 消息队列
 
-	- 消息队列的通信模式是这样的：a 进程要给 b 进程发消息，只需要把消息挂在消息队列（可以是中介邮局，也可以是进程自己的信箱）里就行了，b 进程需要的时候再去取消息队列里的消息。
-	- 消息队列可以独立于读写进程存在，就算进程终止时，消息队列的内容也不会被删除。
-	- 读进程可以根据消息类型有选择的接收消息，而不像 FIFO 那样只能默认接收。
-![在这里插入图片描述](https://img-blog.csdnimg.cn/275eead04d274d7f99efb1af7924a882.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_20,color_FFFFFF,t_70,g_se,x_16)如果进程发送的数据较大，并且两个进程通信非常频繁的话，消息队列模型就不太合适了，因为如果发送的数据很大的话，意味着发送消息（拷贝）这个过程就需要很多时间来读写内存。
+  - 消息队列的通信模式是这样的：a 进程要给 b 进程发消息，只需要把消息挂在消息队列（可以是中介邮局，也可以是进程自己的信箱）里就行了，b 进程需要的时候再去取消息队列里的消息。
+  - 消息队列可以独立于读写进程存在，就算进程终止时，消息队列的内容也不会被删除。
+  - 读进程可以根据消息类型有选择的接收消息，而不像 FIFO 那样只能默认接收。
+
+  ![image-20220728111427954](操作系统面经/image-20220728111427954.png)
+
+  - 如果进程发送的数据较大，并且两个进程通信非常频繁的话，消息队列模型就不太合适了，因为如果发送的数据很大的话，意味着发送消息（拷贝）这个过程就需要很多时间来读写内存。
 - 共享内存
 	- 共享内存的方式就可以解决拷贝耗时很长的问题了。
 	- 共享内存是**最快**的一种进程通信的方式，因为进程是直接对内存进行存取的。因为可以多个进程对共享内存同时操作，所以对共享空间的访问必须要求进程对共享内存的访问是互斥的。所以我们经常把信号量和共享内存一起使用来实现进程通信。
@@ -381,7 +380,7 @@ V：对信号量执行加 1 操作，并唤醒正在 waiting 的进程
 
 ## 进程的三种状态
 
-![img](https://img-blog.csdnimg.cn/20190922131403201.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2dhbmdoYW9kcmVhbQ==,size_16,color_FFFFFF,t_70)
+![image-20220728110953172](操作系统面经/image-20220728110953172.png)
 
 **就绪状态**：进程已经准备好，已分配到所需资源，只要分配到CPU就能够立即运行
 
@@ -428,7 +427,10 @@ V：对信号量执行加 1 操作，并唤醒正在 waiting 的进程
 时间片轮转算法的效率和时间片的大小有很大关系：
 
 因为进程切换都要保存进程的信息并且载入新进程的信息，如果时间片太小，会导致进程切换得太频繁，在进程切换上就会花过多时间。
-而如果时间片过长，那么实时性就不能得到保证。![在这里插入图片描述](https://img-blog.csdnimg.cn/4d244db0dbb84c269acf79779a7ec8cf.png)
+而如果时间片过长，那么实时性就不能得到保证。
+
+![image-20220728111525585](操作系统面经/image-20220728111525585.png)
+
 5. 优先级调度
 为每个进程分配一个优先级，按优先级进行调度。
 
@@ -443,7 +445,8 @@ V：对信号量执行加 1 操作，并唤醒正在 waiting 的进程
 每个队列优先权也不同，最上面的优先权最高。因此只有上一个队列没有进程在排队，才能调度当前队列上的进程。
 
 可以将这种调度算法看成是时间片轮转调度算法和优先级调度算法的结合。
-![在这里插入图片描述](https://img-blog.csdnimg.cn/ce92d19544c040a3a2d36b0622a0ebae.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_15,color_FFFFFF,t_70,g_se,x_16)
+![在这里插入图片描述](操作系统面经/ce92d19544c040a3a2d36b0622a0ebae.png)
+
 ## 僵尸进程是什么？如何解决？
 - 子进程运行结束了而父进程还没有，而且父进程未对子进程进行回收，就会产生僵尸进程
 
@@ -903,7 +906,7 @@ epoll 对多线程编程更有友好，一个线程调用了 epoll_wait() 另一
 优先调度与当前磁头所在磁道距离最近的磁道。
 
 虽然平均寻道时间比较低，但是不够公平。如果新到达的磁道请求总是比一个在等待的磁道请求近，那么在等待的磁道请求会一直等待下去，也就是出现饥饿现象。具体来说，两端的磁道请求更容易出现饥饿现象。
-![在这里插入图片描述](https://img-blog.csdnimg.cn/2165a83a83b646dbbd4dea51875fb8b7.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_20,color_FFFFFF,t_70,g_se,x_16)
+![在这里插入图片描述](操作系统面经/2165a83a83b646dbbd4dea51875fb8b7.png)
 
 3. 电梯算法
 >SCAN
@@ -913,7 +916,7 @@ epoll 对多线程编程更有友好，一个线程调用了 epoll_wait() 另一
 电梯算法（扫描算法）和电梯的运行过程类似，总是按一个方向来进行磁盘调度，直到该方向上没有未完成的磁盘请求，然后改变方向。
 
 因为考虑了移动方向，因此所有的磁盘请求都会被满足，解决了 SSTF 的饥饿问题。
-![在这里插入图片描述](https://img-blog.csdnimg.cn/08659c43f70043619b41a815519781bc.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_20,color_FFFFFF,t_70,g_se,x_16)
+![在这里插入图片描述](操作系统面经/08659c43f70043619b41a815519781bc.png)
 
 
 
@@ -923,11 +926,11 @@ epoll 对多线程编程更有友好，一个线程调用了 epoll_wait() 另一
 
 [socket通信模型](https://segmentfault.com/a/1190000013712747)
 
-![img](https://img-blog.csdn.net/20170204101604614?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvRXJpY19sZXk=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center)
+![img](操作系统面经/20170204101604614)
 
 ##### TCP三次握手的Socket过程：
 
-![img](https://segmentfault.com/img/bV5Hak?w=416&h=209)
+![img](操作系统面经/bV5Hak)
 
 1. 服务器调用 `socket()`、 `bind()`(绑定socket和端口号)、 `listen()`（监听端口号）完成初始化后，调用 `accept()`（接受来自客户端的连接请求）阻塞等待；
 2. 客户端Socket对象调用 `connect()`向服务器发送了一个SYN并阻塞；
@@ -939,7 +942,7 @@ epoll 对多线程编程更有友好，一个线程调用了 epoll_wait() 另一
 
 ##### TCP四次挥手的Socket过程：
 
-![img](https://segmentfault.com/img/bV5Hav?w=346&h=209)
+![img](操作系统面经/bV5Hav)
 
 1. 某个应用进程调用 `close()`主动关闭，发送一个FIN；
 2. 另一端接收到FIN后被动执行关闭，并发送ACK确认；
