--- a/notes/美的实习.md
+++ b/notes/美的实习.md
@@ -134,11 +134,11 @@ JUnit是单元测试框架，可以轻松的完成关联依赖关系少或者比
 
 因此，在介绍如何编写测试用例之前，先看一个软件系统登录功能的测试（如下截图所示）：
 
-![img](https://pic2.zhimg.com/80/v2-b7a02a6a1cc885466032f87f50ace523_720w.jpg?source=1940ef5c)
+![img](美的实习/v2-b7a02a6a1cc885466032f87f50ace523_720w.jpg)
 
 **目录**
 
-![img](https://pica.zhimg.com/80/v2-5b1623e63906586109cf4b8c4fae8ee8_720w.jpg?source=1940ef5c)
+![img](美的实习/v2-5b1623e63906586109cf4b8c4fae8ee8_720w.jpg)
 
 > 测试用例：为了特定的目的（证明软件存在某问题）而设计的一组由测试输入、执行条件、预期结果构成的文档
 
@@ -159,7 +159,7 @@ JUnit是单元测试框架，可以轻松的完成关联依赖关系少或者比
 
 4、用例的模板：描述编写用例核心内容，一般项目都有自己的设计用例的模板，常见测试用例模板可参照如下：
 
-![img](https://pic2.zhimg.com/80/v2-d2d1bd8cc3637cb5c246ccd4379f6e1b_720w.jpg?source=1940ef5c)
+![img](美的实习/v2-d2d1bd8cc3637cb5c246ccd4379f6e1b_720w.jpg)
 
 ## **二.为什么要写测试用例**
 
@@ -180,13 +180,13 @@ JUnit是单元测试框架，可以轻松的完成关联依赖关系少或者比
 
 回归到开篇的问题，对于一个基本的登录页面，按照常规思路能否会想到如下截图的测试点呢？实际，这些测试点都是源于从用户角度出发，结合需求进行细化设计的过程。实际测试中是不是只有这些测试点呢？
 
-![img](https://pic1.zhimg.com/80/v2-51ec6d57f70e8386c7b20bed362b998f_720w.jpg?source=1940ef5c)
+![img](美的实习/v2-51ec6d57f70e8386c7b20bed362b998f_720w.jpg)
 
 **2、学习积累**
 
 相信大多数测试工程师都能够想到上述基本的测试点，然在实际工作中面对的项目不同，设计测试用例的颗粒度也有不同的要求，如果针对上述登录的模块，更深入一层考虑呢？此时需要对产品的熟悉程度及测试经验的加持，而且这些点的设计是不断学习、熟悉项目、测试积累中得到的。
 
-![img](https://pic3.zhimg.com/50/v2-5c4028a56d42508de3a8733b807ffcfb_720w.jpg?source=1940ef5c)
+![img](美的实习/v2-5c4028a56d42508de3a8733b807ffcfb_720w.jpg)
 
 
 
@@ -237,7 +237,7 @@ JUnit是单元测试框架，可以轻松的完成关联依赖关系少或者比
 
 **因此，对于上述登录功能，按照上述质量模型的思路指导，就得到如下的测试点：**
 
-![img](https://pic1.zhimg.com/80/v2-170ab93b06c695c8e45e2b50c170de98_720w.jpg?source=1940ef5c)
+![img](美的实习/v2-170ab93b06c695c8e45e2b50c170de98_720w.jpg)
 
 
 
