--- a/notes/计算机网络面经.md
+++ b/notes/计算机网络面经.md
@@ -254,7 +254,7 @@ how? 简略过程是这样的：
 
 服务端可以向证书颁发机构CA申请证书，以避免中间人攻击（防止证书被篡改）。证书包含三部分内容：**证书内容、证书签名算法和签名**，签名是为了验证身份。
 
-![图片](https://mmbiz.qpic.cn/mmbiz_png/1Wxib6Z0MOJbCRJHmV85OCNfEPABbFy4jjibrtBPxA0SBiacBSibWkHqHECBh0UQhwUJWnyF9iaaMEibjdIBEdiakPKcw/640?wx_fmt=png&wxfrom=5&wx_lazy=1&wx_co=1)
+![图片](计算机网络面经/640)
 
 服务端把证书传输给浏览器，浏览器从证书里取公钥。证书可以证明该公钥对应本网站。
 
@@ -803,7 +803,7 @@ https://baijiahao.baidu.com/s?id=1699167520492855999&wfr=spider&for=pc
 2.当使用了重定向跳转页面后，在其客户端路径栏显示的应该是其重定向的路径，客户端是可以观察到页面地址变化的，重定向是客户端至少做了两次访问请求的
 
 3.简单的图例
-![在这里插入图片描述](https://img-blog.csdnimg.cn/f82d5f6aaa734078b9f8409135313831.png)
+![在这里插入图片描述](计算机网络面经/f82d5f6aaa734078b9f8409135313831.png)
 请求转发：
 
 1.可以理解是服务器端行为，客户端发起一次请求，这个请求在整个服务器端可以被多次传递，但都是由服务器端的处理程序传递给另一个处理程序，客户端不需要发起二次请求，无论这个请求经历过多少个处理程序，始终都是同一个请求，也就意味着，这个请求中的数据经历过的每一个处理程序都可以使用
@@ -811,7 +811,7 @@ https://baijiahao.baidu.com/s?id=1699167520492855999&wfr=spider&for=pc
 2.中间传递的是自己容器的request，客户端的路径栏显示的还是第一次访问的路径，客户端是感觉不到服务器做了转发的，请求转发客户端是只做了一次请求。
 
 3.简单的图例
-![在这里插入图片描述](https://img-blog.csdnimg.cn/ae86e3b48b8544ca81d3ac7944dc00dc.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_18,color_FFFFFF,t_70,g_se,x_16)
+![在这里插入图片描述](计算机网络面经/ae86e3b48b8544ca81d3ac7944dc00dc.png)
 二、使用
 当前后两个页面有数据传递时，例如查询了数据需要在页面显示时，用请求转发
 
@@ -943,11 +943,11 @@ TCP的拥塞控制采用了四种算法，即**慢开始**、**拥塞避免**、
 - 接收端的控制：
 校验和：保证首部的数据的校验和。如何校验和有误，那么就丢弃该数据包，且不发送确认消息。
 丢弃重复：如果收到重复的数据包，直接丢弃。
-![在这里插入图片描述](https://img-blog.csdnimg.cn/57a067c77b324b97bae1e3e328eaddfb.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_20,color_FFFFFF,t_70,g_se,x_16)
-![在这里插入图片描述](https://img-blog.csdnimg.cn/098375d2bd5b4b99b9fdd4954401d2d1.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_20,color_FFFFFF,t_70,g_se,x_16)
-![在这里插入图片描述](https://img-blog.csdnimg.cn/ae095519e28b443e98668f724612beff.png)
-![在这里插入图片描述](https://img-blog.csdnimg.cn/32856c04d47949228c2c4647f7ca5401.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_20,color_FFFFFF,t_70,g_se,x_16)
-![在这里插入图片描述](https://img-blog.csdnimg.cn/4ca752ae08a047729dd9b8fc594ac2d8.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_20,color_FFFFFF,t_70,g_se,x_16)
+![在这里插入图片描述](计算机网络面经/57a067c77b324b97bae1e3e328eaddfb.png)
+![在这里插入图片描述](计算机网络面经/098375d2bd5b4b99b9fdd4954401d2d1.png)
+![在这里插入图片描述](计算机网络面经/ae095519e28b443e98668f724612beff.png)
+![在这里插入图片描述](计算机网络面经/32856c04d47949228c2c4647f7ca5401.png)
+![在这里插入图片描述](计算机网络面经/4ca752ae08a047729dd9b8fc594ac2d8.png)
 
 ## 三次握手和四次挥手-简略版
 
@@ -981,7 +981,7 @@ SYN：请求连接标志位！
 ACK：确认标志位！
 seq：序号！
 ack：确认号！
-![在这里插入图片描述](https://img-blog.csdnimg.cn/4cb85417e2544b488d1316f634019c5d.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_20,color_FFFFFF,t_70,g_se,x_16)
+![在这里插入图片描述](计算机网络面经/4cb85417e2544b488d1316f634019c5d.png)
 1. 三次握手的过程：
 客户端的连接请求：首先客户端发送一个带 SYN 标志位的连接请求到服务器，客户端进入 SYN-SENT 状态。
 服务端的连接确认请求：服务器收到之后回复一个 SYN 和 ACK 的确认报文到客户端，此时服务端进入 SYN-RECV 状态，等待第三次握手。
@@ -1006,7 +1006,7 @@ https://blog.csdn.net/plokmju88/article/details/103884145
 洪水攻击，服务器在等待第三次握手时是处于半连接状态，也是需要耗费资源的，如果有攻击者故意不发送第三次 ACK，让大量连接处于半连接状态，那么会把服务器资源耗尽，洪水攻击的目的就达到了。
 
 ## TCP 四次挥手
-![在这里插入图片描述](https://img-blog.csdnimg.cn/414787ff0ab0499388134fb4b1b319b3.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_20,color_FFFFFF,t_70,g_se,x_16)
+![在这里插入图片描述](计算机网络面经/414787ff0ab0499388134fb4b1b319b3.png)
 
 
 
