--- a/notes/设计模式.md
+++ b/notes/设计模式.md
@@ -1,18 +1,26 @@
- 
-
-
+博客
 
 https://blog.csdn.net/weixin_43122090/article/details/105462226
+
+菜鸟教程
+
+https://www.runoob.com/design-pattern/factory-pattern.html
 
 ## 23种设计模式
 
 创建型模式，共五种：工厂方法模式、抽象工厂模式、单例模式、建造者模式、原型模式。
 
+![](设计模式/image-20220721100814443.png)
+
 结构型模式，共七种：适配器模式、装饰器模式、代理模式、外观模式、桥接模式、组合模式、享元模式。
+
+![image-20220721101752561](设计模式/image-20220721101752561.png)
 
 行为型模式，共十一种：策略模式、模板方法模式、观察者模式、迭代子模式、责任链模式、命令模式、备忘录模式、状态模式、访问者模式、中介者模式、解释器模式。
 
+![image-20220721101826164](设计模式/image-20220721101826164.png)
 
+![image-20220721101842940](设计模式/image-20220721101842940.png)
 
 ## 6大设计原则
 
@@ -63,15 +71,44 @@ https://blog.csdn.net/weixin_43122090/article/details/105462226
 
 
 
+## 设计模式实例
+
+
+
 **工厂模式**
 
 其在父类中提供⼀个创建对象的⽅法（子类实现接口的具体实现方法）， 允许⼦类决定实例化对象的类型。
 
-
+![image-20220721100151410](设计模式/image-20220721100151410.png)
 
 **抽象工厂模式**
 
+![image-20220721101349931](设计模式/image-20220721101349931.png)
+
 提供一个创建一系列相关或相互依赖对象的接口，而无需指定它们具体的类。
+
+抽象工厂模式（Abstract Factory Pattern）是围绕一个超级工厂创建其他工厂。该超级工厂又称为其他工厂的工厂。这种类型的设计模式属于创建型模式，它提供了一种创建对象的最佳方式。
+
+在抽象工厂模式中，接口是负责创建一个相关对象的工厂，不需要显式指定它们的类。每个生成的工厂都能按照工厂模式提供对象。
+
+![image-20220721101125845](设计模式/image-20220721101125845.png)
+
+
+
+**代理模式**
+
+- 通过代理控制对象的访问，可以在这个对象调用方法之前、调用方法之后去处理/添加新的功能。(也就是AO的P微实现)
+- 代理在原有代码乃至原业务流程都不修改的情况下，直接在业务流程中切入新代码，增加新功能，这也和Spring的（面向切面编程）很相似
+
+应用场景
+
+- Spring AOP、日志打印、异常处理、事务控制、权限控制等
+
+静态代理：简单代理模式，是动态代理的理论基础。常见使用在代理模式
+jdk动态代理：使用反射完成代理。需要有顶层接口才能使用，常见是mybatis的mapper文件是代理。
+cglib动态代理：也是使用反射完成代理，可以直接代理类（jdk动态代理不行），使用字节码技术，不能对 final类进行继承。（需要导入jar包）
+
+![image-20220721110550264](设计模式/image-20220721110550264.png)
 
 
 
@@ -93,13 +130,15 @@ https://blog.csdn.net/weixin_43122090/article/details/105462226
 
 装饰器模式（Decorator Pattern）允许向一个现有的对象添加新的功能，同时又不改变其结构，就是创建了一个装饰类，用来包装原有的类，提供额外的功能。
 
-
+![image-20220721110753944](设计模式/image-20220721110753944.png)
 
 **模板模式**
 
 在模板模式（Template Pattern）中，一个抽象类公开定义了执行它的方法的方式/模板。它的子类可以按需要重写方法实现，但调用将以抽象类中定义的方式进行
 
 就是子类重写抽象类定义的模板方法，调用的时候以抽象类定义的方法就行调用 执行方法按具体实例类执行
+
+
 
 
 
